remove cookie, add bearer token and jwt
