# docs/swagger.json
@@ -1,18 +1,13 @@
 {
-    "schemes": [
-        "http"
-    ],
     "swagger": "2.0",
     "info": {
-        "description": "Bmstu Open IT Platform",
-        "title": "BITOP",
+        "description": "API with JWT Auth",
+        "title": "Lab4 API",
         "contact": {
-            "name": "API Support",
-            "url": "https://vk.com/bmstu_schedule",
-            "email": "bitop@spatecon.ru"
+            "name": "API Support"
         },
         "license": {
-            "name": "AS IS (NO WARRANTY)"
+            "name": "AS IS"
         },
         "version": "1.0"
     },
@@ -23,7 +18,7 @@
             "get": {
                 "security": [
                     {
-                        "SessionCookieAuth": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "Для исследователя возвращает только его заявки, для модератора и администратора — все",
@@ -65,7 +60,7 @@
             "get": {
                 "security": [
                     {
-                        "SessionCookieAuth": []
+                        "BearerAuth": []
                     }
                 ],
                 "produces": [
@@ -101,7 +96,7 @@
             "post": {
                 "security": [
                     {
-                        "SessionCookieAuth": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "Создаёт новую заявку и назначает текущего пользователя автором",
@@ -140,7 +135,7 @@
             "put": {
                 "security": [
                     {
-                        "SessionCookieAuth": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "Только модератор или администратор может завершить сформированную заявку",
@@ -222,7 +217,7 @@
             "put": {
                 "security": [
                     {
-                        "SessionCookieAuth": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "Только владелец заявки может перевести её из черновика в статус \"сформирована\"",
@@ -340,7 +335,7 @@
         },
         "/auth/login": {
             "post": {
-                "description": "Создаёт серверную сессию в Redis и устанавливает cookie session_id",
+                "description": "Аутентификация через JWT, возвращает access_token",
                 "consumes": [
                     "application/json"
                 ],
@@ -350,7 +345,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Вход пользователя",
+                "summary": "Вход пользователя (JWT)",
                 "parameters": [
                     {
                         "description": "Данные входа",
@@ -366,12 +361,37 @@
                     "200": {
                         "description": "OK",
                         "schema": {
+                            "$ref": "#/definitions/app.loginResp"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
                             "type": "object",
                             "additionalProperties": true
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request",
+                    }
+                }
+            }
+        },
+        "/auth/logout": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Добавляет текущий JWT в blacklist Redis",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Выход (Blacklist JWT)",
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -383,20 +403,13 @@
                             "type": "object",
                             "additionalProperties": true
                         }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
                     }
                 }
             }
         },
         "/auth/register": {
             "post": {
-                "description": "Создаёт нового пользователя-исследователя",
+                "description": "Создаёт нового пользователя",
                 "consumes": [
                     "application/json"
                 ],
@@ -427,20 +440,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "409": {
-                        "description": "Conflict",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -484,6 +483,26 @@
                 }
             }
         },
+        "app.loginResp": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "expires_in": {
+                    "type": "integer"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "token_type": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "app.registerReq": {
             "type": "object",
             "properties": {
@@ -494,9 +513,6 @@
                     "type": "string"
                 },
                 "pass": {
-                    "type": "string"
-                },
-                "role": {
                     "type": "string"
                 }
             }
@@ -622,10 +638,11 @@
         }
     },
     "securityDefinitions": {
-        "SessionCookieAuth": {
+        "BearerAuth": {
+            "description": "Type \"Bearer\" followed by a space and JWT token. Example: \"Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...\"",
             "type": "apiKey",
-            "name": "session_id",
-            "in": "cookie"
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
